--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,9 @@ repositories {
     mavenLocal()
     maven {
         url = 'https://repo.runelite.net'
-    }
-    maven {
-        url = 'https://raw.githubusercontent.com/runelite/maven/master'
+        content {
+            includeGroupByRegex("net\\.runelite.*")
+        }
     }
     mavenCentral()
 }
@@ -28,8 +28,64 @@ dependencies {
 
 group = 'com.catracker'
 version = '1.0.0'
-sourceCompatibility = '11'
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
+    options.release.set(11)
+}
+
+tasks.register('shadowJar', Jar) {
+    dependsOn configurations.testRuntimeClasspath
+
+    manifest {
+        attributes(
+                'Main-Class': 'com.catracker.CombatAchievementsPluginTest',
+                'Multi-Release': true
+        )
+    }
+
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
+    from sourceSets.main.output
+    from sourceSets.test.output
+    from {
+        configurations.testRuntimeClasspath.collect { file ->
+            file.isDirectory() ? file : zipTree(file)
+        }
+    }
+
+    exclude 'META-INF/INDEX.LIST'
+    exclude 'META-INF/*.SF'
+    exclude 'META-INF/*.DSA'
+    exclude 'META-INF/*.RSA'
+    exclude '**/module-info.class'
+
+    group = BasePlugin.BUILD_GROUP
+    archiveClassifier.set('shadow')
+    archiveFileName.set("${rootProject.name}-${project.version}-all.jar")
+}
+
+// Convenience task to build and run
+task runDev(type: JavaExec) {
+    dependsOn shadowJar
+    group = "runelite"
+    description = "Build and run RuneLite with the plugin"
+
+    classpath = files(tasks.shadowJar.archiveFile)
+
+    mainClass = 'com.catracker.CombatAchievementsPluginTest'
+
+    jvmArgs = [
+            '-ea',
+            '-Xmx2048m',
+            '-Xms512m',
+            '-XX:+UseG1GC',
+            '-XX:+UseStringDeduplication',
+            '-Drunelite.launcher.nojvm=true',
+            '-Drunelite.developer-mode=true',
+            '--add-exports=java.desktop/com.apple.eawt=ALL-UNNAMED',
+            '--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED'
+    ]
+
+    args '--developer-mode'
 }
