update rl properties

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Combat Achievements Tracker
-author=YourUsername
-support=https://github.com/yourusername/combat-achievements-tracker
+author=Ethan Hubbartt (bajj)
+support=https://github.com/ehubbartt/combat-achievements-tracker
 description=Track and manage combat achievements with filtering, sorting, and progress tracking
 tags=combat,achievements,tracker,progress,pvm
 plugins=com.catracker.CombatAchievementsPlugin
